添加获取包含某子串的用户名的列表以及批量添加论坛用户
